compile_errors.txt
testing.cpp: In function ‘int main()’:
testing.cpp:13:1: error: expected primary-expression before ‘}’ token
   13 | }
      | ^
